<resources>
    <string name="app_name">My Application0603</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_second">SecondActivity</string>
    <string name="hymidity">Влажность</string>
    <string name="wind">Скорость ветра</string>
    <string name="pressure">Давление</string>
    <string name="buttonBackText">Назад</string>
    <string name="enterText">Введите текст</string>


    <string name="empty">Пусто</string>
    <string-array name="cities">
        <item>Москва</item>
        <item>Санкт-Петербург</item>
        <item>Сочи</item>
    </string-array>
</resources>
