<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:theme="@style/MyChekboxStyle"
    android:layout_width="match_parent"
    android:background="@color/backgroundMain"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <EditText
        android:id="@+id/textTown"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_marginStart="55dp"
        android:layout_marginEnd="55dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonStartSecondActivity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonStartSecondActivity"
        style="@style/Base.Widget.AppCompat.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="Second Activity"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/checkboxHumidity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/hymidity"
        app:layout_constraintBottom_toTopOf="@+id/textTown"
        app:layout_constraintStart_toStartOf="@+id/textTown" />

    <CheckBox
        android:id="@+id/checkboxWind"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/wind"
        app:layout_constraintBottom_toTopOf="@+id/checkboxHumidity"
        app:layout_constraintStart_toStartOf="@+id/checkboxHumidity" />

    <CheckBox
        android:id="@+id/checkboxPressure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/pressure"
        app:layout_constraintBottom_toTopOf="@+id/checkboxWind"
        app:layout_constraintStart_toStartOf="@+id/checkboxWind" />

</androidx.constraintlayout.widget.ConstraintLayout>